--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,10 +133,10 @@ jobs:
         include:
           - python-version: "3.11"
             db-backend: "postgresql"
-            nautobot-version: "2.2.1"
-          # - python-version: "3.12"
-          #   db-backend: "mysql"
-          #   nautobot-version: "stable"
+            nautobot-version: "2.0.0"
+          - python-version: "3.12"
+            db-backend: "mysql"
+            nautobot-version: "stable"
     runs-on: "ubuntu-22.04"
     env:
       INVOKE_NAUTOBOT_DEVICE_LIFECYCLE_MGMT_PYTHON_VER: "${{ matrix.python-version }}"
