--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -28,16 +27,12 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.13"
+python = ">=3.9.2,<3.13"
 # Used for local development
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-nautobot = "^2.0.0"
-# Numpy is not a direct dependency, but we are assisting Poetry version resolution by providing constraints.
-numpy = [
-    {version = "^1.26", python = ">=3.9"},
-    {version = "<1.25", python = "==3.8"}
-]
+nautobot = {git = "https://github.com/nautobot/nautobot.git", rev = "next"}
+# nautobot = "^3.0.0"  # TODO: Uncomment after v3.0.0 is released
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
@@ -98,7 +93,7 @@ notes = """,
 
 [tool.pylint-nautobot]
 supported_nautobot_versions = [
-    "2.2.0"
+    "3.0.0"
 ]
 
 [tool.ruff]
