Revert drift-manage unnecessary changes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,8 @@ mkdocstrings = "0.25.2"
 mkdocstrings-python = "1.10.8"
 mkdocs-autorefs = "1.2.0"
 griffe = "1.1.1"
+sentry-sdk = "*"
+time-machine = "*"
 towncrier = ">=23.6.0,<=24.8.0"
 to-json-schema = "*"
 jsonschema = "*"
