--- a/development/development.env
+++ b/development/development.env
@@ -40,3 +40,6 @@ MYSQL_ROOT_HOST=%
 
 # Use a less verbose log level for Celery Beat
 NAUTOBOT_BEAT_LOG_LEVEL=INFO
+
+
+NAUTOBOT_DLM_ENABLED_METRICS = "nautobot_lcm_software_compliance_per_device_type,nautobot_lcm_software_compliance_per_inventory_item,nautobot_lcm_hw_end_of_support_per_part_number,nautobot_lcm_hw_end_of_support_per_location"
