--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.11"]
+        python-version: ["3.13"]
         nautobot-version: ["next"]  # TODO: Change to 3.0.0 after v3.0.0 is released
     env:
       INVOKE_NAUTOBOT_DEVICE_LIFECYCLE_MGMT_PYTHON_VER: "${{ matrix.python-version }}"
@@ -151,14 +151,14 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.10"]  # 3.12 stable is tested in unittest_report stage.
+        python-version: ["3.10"]  # 3.13 stable is tested in unittest_report stage.
         db-backend: ["postgresql"]
         nautobot-version: ["next"]  # TODO: Change to stable after v3.0.0 is released
         include:
           # - python-version: "3.11"
           #   db-backend: "postgresql"
           #   nautobot-version: "3.0.0"  # TODO: Uncomment after v3.0.0 is released
-          - python-version: "3.12"
+          - python-version: "3.13"
             db-backend: "mysql"
             nautobot-version: "next"  # TODO: Change to stable after v3.0.0 is released
     runs-on: "ubuntu-22.04"
@@ -206,9 +206,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.13"]
         db-backend: ["postgresql"]
-        nautobot-version: ["stable"]
+        nautobot-version: ["next"]  # TODO: Change to stable after v3.0.0 is released
     runs-on: "ubuntu-22.04"
     permissions:
       pull-requests: "write"
@@ -309,7 +309,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
-          python-version: "3.12"
+          python-version: "3.13"
           poetry-install-options: "--no-root"
       - name: "Set env"
         run: "echo RELEASE_VERSION=${GITHUB_REF:10} >> $GITHUB_ENV"
@@ -339,7 +339,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
-          python-version: "3.12"
+          python-version: "3.13"
           poetry-install-options: "--no-root"
       - name: "Set env"
         run: "echo RELEASE_VERSION=${GITHUB_REF:10} >> $GITHUB_ENV"
