--- a/pyproject.toml
+++ b/pyproject.toml
@@ -193,7 +193,7 @@ plugins.md028.enabled = false
 plugins.md029.enabled = false
 plugins.md030.enabled = false
 plugins.md031.enabled = false
-plugins.md032.enabled = true # blanks-around-lists
+plugins.md032.enabled = false # blanks-around-lists
 plugins.md033.enabled = false
 plugins.md034.enabled = false
 plugins.md035.enabled = false
@@ -213,7 +213,7 @@ plugins.md048.enabled = false
 plugins.md049.enabled = false
 plugins.md050.enabled = false
 plugins.pml100.enabled = false
-plugins.pml101.enabled = true # list-anchored-indent
+plugins.pml101.enabled = false # list-anchored-indent
 plugins.pml102.enabled = false
 plugins.pml103.enabled = false
 
