--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,11 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.13"
+python = ">=3.9.2,<3.13"
 # Used for local development
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-nautobot = "^2.0.0"
+nautobot = "^2.4.16"
 # Numpy is not a direct dependency, but we are assisting Poetry version resolution by providing constraints.
 numpy = [
     {version = "^1.26", python = ">=3.9"},
@@ -193,7 +193,7 @@ plugins.md028.enabled = false
 plugins.md029.enabled = false
 plugins.md030.enabled = false
 plugins.md031.enabled = false
-plugins.md032.enabled = true # blanks-around-lists
+plugins.md032.enabled = false # blanks-around-lists
 plugins.md033.enabled = false
 plugins.md034.enabled = false
 plugins.md035.enabled = false
@@ -213,10 +213,25 @@ plugins.md048.enabled = false
 plugins.md049.enabled = false
 plugins.md050.enabled = false
 plugins.pml100.enabled = false
-plugins.pml101.enabled = true # list-anchored-indent
+plugins.pml101.enabled = false # list-anchored-indent
 plugins.pml102.enabled = false
 plugins.pml103.enabled = false
 
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = { version = "1.6.0" }
+mkdocs-material = { version = "9.5.32" }
+mkdocstrings = { version = "0.25.2" }
+mkdocstrings-python = { version = "1.10.8" }
+mkdocs-autorefs = { version = "1.2.0" }
+griffe = { version = "1.1.1" }
+markdown-version-annotations = { version = "1.0.1" }
+Markdown = "*"
+
+ 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
