Update Django Toolbar

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ netutils = ">=1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
-django-debug-toolbar = "<4.4"
+# Currently pinned to 5.2.0 due to https://github.com/django-commons/django-debug-toolbar/issues/2168
+django-debug-toolbar = "~5.2.0"
 invoke = "*"
 ipython = "*"
 pylint = "*"
