--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-lifecycle-mgmt"
-version = "4.0.0a3"
+version = "4.0.0"
 description = "Manages device lifecycles for platforms and software."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
@@ -31,8 +31,7 @@ python = ">=3.10,<3.14"
 # Used for local development
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-nautobot = ">=3.0.0a2,<3.0.0rc99"
-# nautobot = "^3.0.0"  # TODO: Uncomment after v3.0.0 is released
+nautobot = ">=3.0.0,<4.0.0"
 # Numpy is not a direct dependency, but we are assisting Poetry version resolution by providing constraints.
 numpy = "^1.26"
 netutils = ">=1.14.1"
