--- a/invoke.mysql.yml
+++ b/invoke.mysql.yml
@@ -1,7 +1,7 @@
 ---
 nautobot_device_lifecycle_mgmt:
   project_name: "nautobot-device-lifecycle-mgmt"
-  nautobot_ver: "next"  # TODO: Change to 3.0.0 after v3.0.0 is released
+  nautobot_ver: "3.0.0"
   local: false
   python_ver: "3.12"
   compose_dir: "development"
