--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ netutils = ">=1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
-django-debug-toolbar = "<4.4"
+django-debug-toolbar = ">=5.2.0,<5.3.0"
 invoke = "*"
 ipython = "*"
 pylint = "*"
